--- a/server/sass/wdb.sass
+++ b/server/sass/wdb.sass
@@ -70,6 +70,7 @@ footer.mdl-mini-footer
 code
   white-space: pre-wrap
   word-break: break-all
+  overflow-wrap: break-word
 
 .ellipsis
   text-overflow: ellipsis
